@startuml
skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultTextAlignment center
skinparam wrapWidth 220
skinparam maxMessageSize 160
skinparam ArrowColor #555555
skinparam rectangle {
  RoundCorner 12
}

title R4 analysis architecture — functions first, implementations second

rectangle "SOURCE FACTS\nCustomerSnapshot\ncomplete activities + persisted risk_assessments\n(source truth)" as source

package "STAGE 1 — PRIMITIVE SIGNAL ANALYSIS" as stage1 {
  interface "RiskSignalDetectorPort" as detectorPort
  rectangle "Deterministic / rules\nconstant, explainable baseline" as rules
  rectangle "Bayesian / sequential\nprobabilistic inference\nApache Commons Math adapter" as bayes
  rectangle "Fuzzy logic\ngraded rule inference\nproject-owned minimal adapter" as fuzzy
  rectangle "Random Forest / Extra Trees\nclassical learned ML\nTribuo adapter candidate" as forest
  rectangle "Optional anomaly / graph\nclassical statistical/graph methods" as anomaly
  rectangle "Canonical RiskSignalEvidence\ntyped derived artifacts\nnever source truth" as signals

  rules --> detectorPort
  bayes --> detectorPort
  fuzzy --> detectorPort
  forest --> detectorPort
  anomaly --> detectorPort
  detectorPort --> signals
}

package "STAGE 2 — EVIDENCE GROUNDING & RETRIEVAL" as stage2 {
  interface "PolicyKnowledgePort" as policyPort
  rectangle "Policy retrieval adapter\npgvector + local embeddings\nimplementation detail" as retrieval
  rectangle "Canonical PolicyEvidence\nranked retrieved artifacts\nprovider-neutral provenance" as policies

  retrieval --> policyPort
  policyPort --> policies
}

package "APPLICATION MODEL-CONTEXT BOUNDARY" as contextBoundary {
  rectangle "AnalysisContextBuilder\ncomplete aggregates stay exact\ndetail windows selected deterministically" as contextBuilder
  rectangle "AnalysisEvidenceEnvelope\nexact totals + bounded selected details\nactivities | source risk | detector | policy" as envelope

  contextBuilder --> envelope
}

package "STAGE 3 — FINAL ADVISORY SYNTHESIS" as stage3 {
  interface "AnalysisModelPort" as modelPort
  rectangle "Deterministic synthesizer\ndefault offline path" as deterministicModel
  rectangle "Live LLM synthesizer\nOpenAI via Spring AI adapter\nexplicit opt-in" as openai
  rectangle "Private LLM synthesizer\nLM Studio / llama.cpp\nexplicit local opt-in" as lmstudio
  rectangle "Structured AnalysisResult\nLOW | MEDIUM | HIGH\nfindings + recommendations" as result

  deterministicModel --> modelPort
  openai --> modelPort
  lmstudio --> modelPort
  modelPort --> result
}

rectangle "GROUNDING / SAFETY VALIDATION\nreferences only supplied bounded details\nfail closed" as validator
rectangle "PERSISTED REVIEW HISTORY\noperator + detector + retrieval + model provenance" as history
rectangle "REVIEWER UI / API" as reviewer

source --> detectorPort : complete snapshot
source --> policyPort : complete snapshot\nretrieval adapter selects query context
source --> contextBuilder : exact totals + source details
signals --> contextBuilder
policies --> contextBuilder
contextBuilder --> envelope : configured independent bounds\n25 activity | 20 source risk | 8 detector | 3 policy
envelope --> modelPort : bounded grounded evidence
result --> validator
validator --> history : validated only
history --> reviewer

note bottom
Stage 1 and Stage 2 retain complete CustomerSnapshot semantics.
Only the application-owned boundary immediately before AnalysisModelPort bounds model-facing detail.
Full-history aggregate counts remain truthful; grounding references may cite only supplied selected details.
UI pagination and provider token ceilings are separate concerns.
Library/vendor names appear only beneath adapters as implementation provenance.
end note
@enduml
